source/fitsio.d


int ffppn (
    fitsfile* fptr,
    int datatype,
    LONGLONG firstelem,
    LONGLONG nelem,
    void* array,
    void* nulval,
    int* status);
int ffppnb (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    ubyte* array,
    ubyte nulval,
    int* status);
int ffppnsb (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    byte* array,
    byte nulval,
    int* status);
int ffppnui (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    ushort* array,
    ushort nulval,
    int* status);
int ffppni (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    short* array,
    short nulval,
    int* status);
int ffppnj (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    c_long* array,
    c_long nulval,
    int* status);
int ffppnuj (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    c_ulong* array,
    c_ulong nulval,
    int* status);
int ffppnuk (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    uint* array,
    uint nulval,
    int* status);
int ffppnk (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    int* array,
    int nulval,
    int* status);
int ffppne (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    float* array,
    float nulval,
    int* status);
int ffppnd (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    double* array,
    double nulval,
    int* status);
int ffppnjj (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    LONGLONG* array,
    LONGLONG nulval,
    int* status);
int ffppnujj (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    ULONGLONG* array,
    ULONGLONG nulval,
    int* status);

int ffp2db (
    fitsfile* fptr,
    c_long group,
    LONGLONG ncols,
    LONGLONG naxis1,
    LONGLONG naxis2,
    ubyte* array,
    int* status);
int ffp2dsb (
    fitsfile* fptr,
    c_long group,
    LONGLONG ncols,
    LONGLONG naxis1,
    LONGLONG naxis2,
    byte* array,
    int* status);
int ffp2dui (
    fitsfile* fptr,
    c_long group,
    LONGLONG ncols,
    LONGLONG naxis1,
    LONGLONG naxis2,
    ushort* array,
    int* status);
int ffp2di (
    fitsfile* fptr,
    c_long group,
    LONGLONG ncols,
    LONGLONG naxis1,
    LONGLONG naxis2,
    short* array,
    int* status);
int ffp2duj (
    fitsfile* fptr,
    c_long group,
    LONGLONG ncols,
    LONGLONG naxis1,
    LONGLONG naxis2,
    c_ulong* array,
    int* status);
int ffp2dj (
    fitsfile* fptr,
    c_long group,
    LONGLONG ncols,
    LONGLONG naxis1,
    LONGLONG naxis2,
    c_long* array,
    int* status);
int ffp2duk (
    fitsfile* fptr,
    c_long group,
    LONGLONG ncols,
    LONGLONG naxis1,
    LONGLONG naxis2,
    uint* array,
    int* status);
int ffp2dk (
    fitsfile* fptr,
    c_long group,
    LONGLONG ncols,
    LONGLONG naxis1,
    LONGLONG naxis2,
    int* array,
    int* status);
int ffp2de (
    fitsfile* fptr,
    c_long group,
    LONGLONG ncols,
    LONGLONG naxis1,
    LONGLONG naxis2,
    float* array,
    int* status);
int ffp2dd (
    fitsfile* fptr,
    c_long group,
    LONGLONG ncols,
    LONGLONG naxis1,
    LONGLONG naxis2,
    double* array,
    int* status);
int ffp2djj (
    fitsfile* fptr,
    c_long group,
    LONGLONG ncols,
    LONGLONG naxis1,
    LONGLONG naxis2,
    LONGLONG* array,
    int* status);
int ffp2dujj (
    fitsfile* fptr,
    c_long group,
    LONGLONG ncols,
    LONGLONG naxis1,
    LONGLONG naxis2,
    ULONGLONG* array,
    int* status);

int ffp3db (
    fitsfile* fptr,
    c_long group,
    LONGLONG ncols,
    LONGLONG nrows,
    LONGLONG naxis1,
    LONGLONG naxis2,
    LONGLONG naxis3,
    ubyte* array,
    int* status);
int ffp3dsb (
    fitsfile* fptr,
    c_long group,
    LONGLONG ncols,
    LONGLONG nrows,
    LONGLONG naxis1,
    LONGLONG naxis2,
    LONGLONG naxis3,
    byte* array,
    int* status);
int ffp3dui (
    fitsfile* fptr,
    c_long group,
    LONGLONG ncols,
    LONGLONG nrows,
    LONGLONG naxis1,
    LONGLONG naxis2,
    LONGLONG naxis3,
    ushort* array,
    int* status);
int ffp3di (
    fitsfile* fptr,
    c_long group,
    LONGLONG ncols,
    LONGLONG nrows,
    LONGLONG naxis1,
    LONGLONG naxis2,
    LONGLONG naxis3,
    short* array,
    int* status);
int ffp3duj (
    fitsfile* fptr,
    c_long group,
    LONGLONG ncols,
    LONGLONG nrows,
    LONGLONG naxis1,
    LONGLONG naxis2,
    LONGLONG naxis3,
    c_ulong* array,
    int* status);
int ffp3dj (
    fitsfile* fptr,
    c_long group,
    LONGLONG ncols,
    LONGLONG nrows,
    LONGLONG naxis1,
    LONGLONG naxis2,
    LONGLONG naxis3,
    c_long* array,
    int* status);
int ffp3duk (
    fitsfile* fptr,
    c_long group,
    LONGLONG ncols,
    LONGLONG nrows,
    LONGLONG naxis1,
    LONGLONG naxis2,
    LONGLONG naxis3,
    uint* array,
    int* status);
int ffp3dk (
    fitsfile* fptr,
    c_long group,
    LONGLONG ncols,
    LONGLONG nrows,
    LONGLONG naxis1,
    LONGLONG naxis2,
    LONGLONG naxis3,
    int* array,
    int* status);
int ffp3de (
    fitsfile* fptr,
    c_long group,
    LONGLONG ncols,
    LONGLONG nrows,
    LONGLONG naxis1,
    LONGLONG naxis2,
    LONGLONG naxis3,
    float* array,
    int* status);
int ffp3dd (
    fitsfile* fptr,
    c_long group,
    LONGLONG ncols,
    LONGLONG nrows,
    LONGLONG naxis1,
    LONGLONG naxis2,
    LONGLONG naxis3,
    double* array,
    int* status);
int ffp3djj (
    fitsfile* fptr,
    c_long group,
    LONGLONG ncols,
    LONGLONG nrows,
    LONGLONG naxis1,
    LONGLONG naxis2,
    LONGLONG naxis3,
    LONGLONG* array,
    int* status);
int ffp3dujj (
    fitsfile* fptr,
    c_long group,
    LONGLONG ncols,
    LONGLONG nrows,
    LONGLONG naxis1,
    LONGLONG naxis2,
    LONGLONG naxis3,
    ULONGLONG* array,
    int* status);

int ffpss (
    fitsfile* fptr,
    int datatype,
    c_long* fpixel,
    c_long* lpixel,
    void* array,
    int* status);
int ffpssb (
    fitsfile* fptr,
    c_long group,
    c_long naxis,
    c_long* naxes,
    c_long* fpixel,
    c_long* lpixel,
    ubyte* array,
    int* status);
int ffpsssb (
    fitsfile* fptr,
    c_long group,
    c_long naxis,
    c_long* naxes,
    c_long* fpixel,
    c_long* lpixel,
    byte* array,
    int* status);
int ffpssui (
    fitsfile* fptr,
    c_long group,
    c_long naxis,
    c_long* naxes,
    c_long* fpixel,
    c_long* lpixel,
    ushort* array,
    int* status);
int ffpssi (
    fitsfile* fptr,
    c_long group,
    c_long naxis,
    c_long* naxes,
    c_long* fpixel,
    c_long* lpixel,
    short* array,
    int* status);
int ffpssuj (
    fitsfile* fptr,
    c_long group,
    c_long naxis,
    c_long* naxes,
    c_long* fpixel,
    c_long* lpixel,
    c_ulong* array,
    int* status);
int ffpssj (
    fitsfile* fptr,
    c_long group,
    c_long naxis,
    c_long* naxes,
    c_long* fpixel,
    c_long* lpixel,
    c_long* array,
    int* status);
int ffpssuk (
    fitsfile* fptr,
    c_long group,
    c_long naxis,
    c_long* naxes,
    c_long* fpixel,
    c_long* lpixel,
    uint* array,
    int* status);
int ffpssk (
    fitsfile* fptr,
    c_long group,
    c_long naxis,
    c_long* naxes,
    c_long* fpixel,
    c_long* lpixel,
    int* array,
    int* status);
int ffpsse (
    fitsfile* fptr,
    c_long group,
    c_long naxis,
    c_long* naxes,
    c_long* fpixel,
    c_long* lpixel,
    float* array,
    int* status);
int ffpssd (
    fitsfile* fptr,
    c_long group,
    c_long naxis,
    c_long* naxes,
    c_long* fpixel,
    c_long* lpixel,
    double* array,
    int* status);
int ffpssjj (
    fitsfile* fptr,
    c_long group,
    c_long naxis,
    c_long* naxes,
    c_long* fpixel,
    c_long* lpixel,
    LONGLONG* array,
    int* status);
int ffpssujj (
    fitsfile* fptr,
    c_long group,
    c_long naxis,
    c_long* naxes,
    c_long* fpixel,
    c_long* lpixel,
    ULONGLONG* array,
    int* status);

int ffpgpb (
    fitsfile* fptr,
    c_long group,
    c_long firstelem,
    c_long nelem,
    ubyte* array,
    int* status);
int ffpgpsb (
    fitsfile* fptr,
    c_long group,
    c_long firstelem,
    c_long nelem,
    byte* array,
    int* status);
int ffpgpui (
    fitsfile* fptr,
    c_long group,
    c_long firstelem,
    c_long nelem,
    ushort* array,
    int* status);
int ffpgpi (
    fitsfile* fptr,
    c_long group,
    c_long firstelem,
    c_long nelem,
    short* array,
    int* status);
int ffpgpuj (
    fitsfile* fptr,
    c_long group,
    c_long firstelem,
    c_long nelem,
    c_ulong* array,
    int* status);
int ffpgpj (
    fitsfile* fptr,
    c_long group,
    c_long firstelem,
    c_long nelem,
    c_long* array,
    int* status);
int ffpgpuk (
    fitsfile* fptr,
    c_long group,
    c_long firstelem,
    c_long nelem,
    uint* array,
    int* status);
int ffpgpk (
    fitsfile* fptr,
    c_long group,
    c_long firstelem,
    c_long nelem,
    int* array,
    int* status);
int ffpgpe (
    fitsfile* fptr,
    c_long group,
    c_long firstelem,
    c_long nelem,
    float* array,
    int* status);
int ffpgpd (
    fitsfile* fptr,
    c_long group,
    c_long firstelem,
    c_long nelem,
    double* array,
    int* status);
int ffpgpjj (
    fitsfile* fptr,
    c_long group,
    c_long firstelem,
    c_long nelem,
    LONGLONG* array,
    int* status);
int ffpgpujj (
    fitsfile* fptr,
    c_long group,
    c_long firstelem,
    c_long nelem,
    ULONGLONG* array,
    int* status);

/*--------------------- iterator functions -------------*/
int fits_iter_set_by_name (
    iteratorCol* col,
    fitsfile* fptr,
    char* colname,
    int datatype,
    int iotype);
int fits_iter_set_by_num (
    iteratorCol* col,
    fitsfile* fptr,
    int colnum,
    int datatype,
    int iotype);
int fits_iter_set_file (iteratorCol* col, fitsfile* fptr);
int fits_iter_set_colname (iteratorCol* col, char* colname);
int fits_iter_set_colnum (iteratorCol* col, int colnum);
int fits_iter_set_datatype (iteratorCol* col, int datatype);
int fits_iter_set_iotype (iteratorCol* col, int iotype);

fitsfile* fits_iter_get_file (iteratorCol* col);
char* fits_iter_get_colname (iteratorCol* col);
int fits_iter_get_colnum (iteratorCol* col);
int fits_iter_get_datatype (iteratorCol* col);
int fits_iter_get_iotype (iteratorCol* col);
void* fits_iter_get_array (iteratorCol* col);
c_long fits_iter_get_tlmin (iteratorCol* col);
c_long fits_iter_get_tlmax (iteratorCol* col);
c_long fits_iter_get_repeat (iteratorCol* col);
char* fits_iter_get_tunit (iteratorCol* col);
char* fits_iter_get_tdisp (iteratorCol* col);

int ffiter (
    int ncols,
    iteratorCol* data,
    c_long offset,
    c_long nPerLoop,
    int function (c_long totaln, c_long offset, c_long firstn, c_long nvalues, int narrays, iteratorCol* data, void* userPointer) workFn,
    void* userPointer,
    int* status);
